--- a/README
+++ b/README
@@ -7,15 +7,17 @@ uses the ReportLab PDF toolkit to produce the PDF.
 
 Basically, the user creates a set of specifications of the label sizes etc,
 writes a callback function which does the actual drawing, and gives these two
-items to a Sheet object along with an output filename. Items are then added to
-the sheet using the add_label() method (or add_labels() to add all items from
-an iterable).
+items to a Sheet object. Items are then added to the sheet using the
+add_label() method (or add_labels() to add all items from an iterable).
 
 The callback function is called once for each item, being given a ReportLab
 Drawing object representing the label, its width and height, and the item to
 draw on the label. Any of the standard ReportLab drawing methods can be used,
 with pylabels automatically adding a clipping path around each label to prevent
 it interfering with other labels.
+
+Once all the items have been added, the labels can be saved as a PDF, or a
+preview of a page can be saved as an image.
 
 Examples
 ========
@@ -28,6 +30,7 @@ The following examples are available in the demos directory:
 * nametags.py - creates a set of nametags from the list of names in the
                 names.txt file. Includes the use of two custom fonts, font size
                 selection, and centred text.
+* preview.py - generates image previews of two of the pages from the nametags.py demo.
 
 Demo fonts
 ==========
@@ -41,7 +44,7 @@ folder:
 License
 =======
 
-Copyright (C) 2012 Blair Bonnett
+Copyright (C) 2012, 2013 Blair Bonnett
 
 pylabels is free software: you can redistribute it and/or modify it under the
 terms of the GNU General Public License as published by the Free Software
